--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       
       <h1 id="httpsalexanderchen1githubio">Alexander Chen’s Personal Website</h1>
 
-<p>Alex is a research assistant at the Center on Contemporary China, where he works primarily with Professor Yu Xie and Junming Huang. 
+<p>Alex is a researcher at Princeton University in the Center on Contemporary China, where he works primarily with Professor Yu Xie and Junming Huang. 
   His research interests include the science of science, networks, the impact of AI on society, NLP, large language models, and demography. 
   Alex graduated with a B.A. in Mathematics and minor in Computer Science from Princeton University and an M.S. in Financial Engineering from Columbia University. 
   He has previously worked as a data scientist at Morgan Stanley in the machine learning and AI group.
