--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       
-      <h1 id="httpsalexanderchen1githubio">Alexander Chen’s Personal Website</h1>
+      <h1 id="httpsalexanderchen1githubio">Alexander Chen</h1>
 
 <p>I am a researcher at Princeton University in the Center on Contemporary China, where I work primarily with Professor Yu Xie and Junming Huang. 
   My research interests include the science of science, networks, the impact of AI on society, NLP, large language models, and demography. 
