--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="/assets/css/style.css?v=4b786317ea123d535d87d5d340edbb9a265227dd">
     <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
+    <title>Alexander Chen</title>
+
 <!-- Setup Google Analytics -->
 
 
