--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       
       <h1 id="httpsalexanderchen1githubio">Alexander Chen</h1>
 
+      <img src='img/Alexander_Chen_Portrait_Large.png' align='right'>
 <p>I am a researcher at Princeton University in the Center on Contemporary China, where I work primarily with Professor Yu Xie and Junming Huang. 
   My research interests include the science of science, networks, the impact of AI on society, NLP, large language models, and demography. 
 </p><p>
